Revert "TSFF-614 Kun dagpenger før stp skal tas med i vurderingen (#10806)"
This reverts commit 7f9f6063200754e7eb5ce89dc978e1efac89faf2.